--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Geert Van Campenhout",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "env-cmd": "^9.0.3",
     "knex": "^0.19.2",
     "knex-migrate": "^1.7.2",
