--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa": "^2.8.1",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^5.1.0",
+    "koa-jwt": "^3.6.0",
     "koa-router": "^7.4.0",
     "pg": "^7.12.1"
   },
