--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "database:drop": "knex-migrate down --to 0",
     "database:reset": "npm run database:drop && npm run database:setup",
-    "database:setup": "knex migrate:latest",
+    "database:setup": "knex migrate:latest && knex seed:run",
     "database:rollback": "knex migrate:rollback",
     "database:migrate": "knex migrate:latest",
     "server": "env-cmd -f ./config/dev.env nodemon --watch server ./server/server.js",
