--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "koa-jwt": "^3.6.0",
     "koa-router": "^7.4.0",
     "pg": "^7.12.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
