--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "koa-router": "^7.4.0",
     "pg": "^7.12.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.2"
+    "vue-router": "^3.1.2",
+    "vue-snotify": "^3.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -39,7 +40,9 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "koa-morgan": "^1.0.1",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
+    "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
