--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa-jwt": "^3.6.0",
     "koa-router": "^7.4.0",
     "pg": "^7.12.1",
+    "validator": "^11.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2",
     "vue-snotify": "^3.2.1"
