Set cross-env for development

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "database:setup": "knex migrate:latest && knex seed:run",
     "database:rollback": "knex migrate:rollback",
     "database:migrate": "knex migrate:latest",
-    "server": "nodemon --watch server ./server/server.js",
+    "server": "cross-env NODE_ENV=development nodemon --watch server ./server/server.js",
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -42,6 +42,7 @@
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
+    "cross-env": "^5.2.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "koa-morgan": "^1.0.1",
